--- a/react_tools/src/index.css
+++ b/react_tools/src/index.css
@@ -549,12 +549,12 @@ Toggle button
   justify-content: center;
   align-items: center;
 }
-.login-image {
-  border-radius: 50%;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  width: 50px;
+.login-name {
+  font-size: 18px;
+  margin-top: 21px;
   margin-right: 20px;
+  text-transform: uppercase;
+  color: white;
 }
 
 /*
@@ -634,4 +634,44 @@ Display menu
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
   background-color: #3e8e41;
+}
+
+/*
+=============== 
+Display menu
+===============
+*/
+
+.cocktail {
+  background: var(--mainWhite);
+  margin-bottom: 2rem;
+  box-shadow: var(--lightShadow);
+  transition: var(--mainTransition);
+  display: grid;
+  grid-template-rows: auto 1fr;
+  border-radius: var(--mainBorderRadius);
+}
+.cocktail:hover {
+  box-shadow: var(--darkShadow);
+}
+.cocktail img {
+  height: 20rem;
+  object-fit: cover;
+  border-top-left-radius: var(--mainBorderRadius);
+  border-top-right-radius: var(--mainBorderRadius);
+}
+.cocktail-footer {
+  padding: 1.5rem;
+}
+.cocktail-footer h3,
+.cocktail-footer h4,
+.cocktail-footer p {
+  margin-bottom: 0.3rem;
+}
+.cocktail-footer h3 {
+  font-size: 2rem;
+}
+.cocktail-footer p {
+  color: var(--darkGrey);
+  margin-bottom: 0.5rem;
 }
