--- a/react_tools/src/index.css
+++ b/react_tools/src/index.css
@@ -504,18 +504,13 @@ Profile Page
   align-items: center;
   flex-flow: column;
 }
-.profile-image {
-  border-radius: 50%;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.profile hr {
-  width: 100%;
-}
 .p-4 {
   margin-bottom: 20px;
 }
-.button-profile {
+.profile h2 {
+  padding-top: 10px;
+}
+/* .button-profile {
   margin-top: 10px;
   display: flex;
   align-items: center;
@@ -523,7 +518,7 @@ Profile Page
   background-color: var(--clr-primary-2);
   border: none;
   color: white;
-}
+} */
 
 /*
 =============== 
@@ -674,4 +669,71 @@ Display menu
 .cocktail-footer p {
   color: var(--darkGrey);
   margin-bottom: 0.5rem;
+}
+
+/*
+=============== 
+Loading
+===============
+*/
+
+.loader,
+.loader:before,
+.loader:after {
+  background: transparent;
+  -webkit-animation: load1 1s infinite ease-in-out;
+  animation: load1 1s infinite ease-in-out;
+  width: 1em;
+  height: 4em;
+}
+.loader {
+  color: var(--primaryColor);
+  text-indent: -9999em;
+  margin: 88px auto;
+  margin-top: 20rem;
+  position: relative;
+  font-size: 3rem;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+  position: absolute;
+  top: 0;
+  content: "";
+}
+.loader:before {
+  left: -1.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 1.5em;
+}
+@-webkit-keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
+}
+@keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
 }
