--- a/react_tools/src/index.css
+++ b/react_tools/src/index.css
@@ -110,7 +110,7 @@ p {
   color: var(--clr-grey-5);
 }
 
-/* styles for browsers larger than 960px; */
+/* styles for browsers larger than 800px; */
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 4rem;
@@ -212,6 +212,11 @@ Navigation bar
 }
 .nav-logo {
   height: 135px;
+}
+@media screen and (max-width: 1000px) {
+  .nav-links a {
+    font-size: 1rem;
+  }
 }
 /*
 =============== 
@@ -356,10 +361,10 @@ Hero
   }
 
   .hero-info h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
   .hero-info p {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
   .hero-images {
     display: block;
@@ -801,7 +806,7 @@ Telscopes
 ===============
 */
 
-.cocktail {
+.telescope {
   background: var(--mainWhite);
   margin-bottom: 2rem;
   box-shadow: var(--lightShadow);
@@ -809,33 +814,47 @@ Telscopes
   display: grid;
   grid-template-rows: auto 1fr;
   border-radius: var(--mainBorderRadius);
-  color: black;
+  color: var(--clr-grey-1);
 }
-.cocktail:hover {
+.telescope:hover {
   box-shadow: var(--darkShadow);
 }
-.cocktail img {
+.telescope img {
   height: 20rem;
   object-fit: cover;
   border-top-left-radius: var(--mainBorderRadius);
   border-top-right-radius: var(--mainBorderRadius);
 }
-.cocktail-footer {
+.telescope-footer {
   padding: 1.5rem;
 }
-.cocktail-footer h3,
-.cocktail-footer h4,
-.cocktail-footer p {
+.telescope-footer h3,
+.telescope-footer h4,
+.telescope-footer p {
   margin-bottom: 0.3rem;
 }
-.cocktail-footer h3 {
+.telescope-footer h3 {
   font-size: 2rem;
 }
-.cocktail-footer p {
+.telescope-footer p {
   color: var(--darkGrey);
   margin-bottom: 0.5rem;
 }
-.cocktails-center {
+.section-title {
+  font-size: 2rem;
+  text-transform: capitalize;
+  letter-spacing: 0.3rem;
+  letter-spacing: var(--mainSpacing);
+  text-align: center;
+  margin-bottom: 3.5rem;
+  margin-top: 1rem;
+  color: var(--clr-grey-2);
+}
+.img-container {
+  display: block;
+  width: fit-content;
+}
+.telescopes-center {
   width: var(--smallWidth);
   margin: 0 auto;
   max-width: var(--fullWidth);
@@ -847,7 +866,7 @@ Telscopes
   /* align-items: start; */
 }
 @media screen and (min-width: 576px) {
-  .cocktails-center {
+  .telescopes-center {
     grid-template-columns: repeat(auto-fill, minmax(338.8px, 1fr));
   }
 }
@@ -917,4 +936,42 @@ Loading
     box-shadow: 0 -2em;
     height: 5em;
   }
+}
+
+/* 
+====== 
+Form
+======
+*/
+.search {
+  margin-top: 1rem;
+  padding-bottom: 0;
+}
+
+.search-form {
+  width: var(--smallWidth);
+  margin: 0 auto;
+  max-width: var(--maxWidth);
+  background: var(--mainWhite);
+  padding: 2rem 2.5rem;
+  text-transform: capitalize;
+  border-radius: var(--mainBorderRadius);
+  box-shadow: var(--lightShadow);
+}
+
+.form-control label {
+  display: block;
+  margin-bottom: 1.25rem;
+  font-weight: bold;
+  letter-spacing: 0.25rem;
+  color: var(--primaryColor);
+}
+.form-control input {
+  width: 100%;
+  border: none;
+  border-color: transparent;
+  background: var(--mainBackground);
+  border-radius: var(--mainBorderRadius);
+  padding: 0.5rem;
+  font-size: 1.2rem;
 }
