Added more functionality to products page

--- a/react_tools/src/index.css
+++ b/react_tools/src/index.css
@@ -974,8 +974,8 @@ Form
 }
 .form-control input {
   width: 100%;
-  border: none;
-  border-color: transparent;
+  border: 1px solid gray;
+  /* border-color: transparent; */
   background: var(--mainBackground);
   border-radius: var(--mainBorderRadius);
   padding: 0.5rem;
