--- a/react_tools/src/index.css
+++ b/react_tools/src/index.css
@@ -1237,7 +1237,7 @@ Form Page
 
 .form {
   width: 340px;
-  height: 440px;
+  height: 460px;
   background: #e6e6e6;
   border-radius: 8px;
   box-shadow: 0 0 40px -10px #000;
@@ -1278,8 +1278,8 @@ Form Page
   color: #5a5a5a;
 }
 .form button {
-  float: right;
-  padding: 8px 12px;
+  float: none;
+  padding: 6px 12px;
   margin: 8px 0 0;
   font-family: "Montserrat", sans-serif;
   border: 2px solid #78788c;
@@ -1295,8 +1295,8 @@ Form Page
 .form div {
   content: "Hi";
   position: absolute;
-  bottom: -15px;
-  right: -20px;
+  bottom: -42px;
+  right: 8px;
   background: #50505a;
   color: #fff;
   width: 320px;
