--- a/react_tools/src/index.css
+++ b/react_tools/src/index.css
@@ -1236,14 +1236,16 @@ Form Page
 */
 
 .form {
-  width: 340px;
+  width: 45%;
+  /* float: left; */
   height: 460px;
   background: #e6e6e6;
   border-radius: 8px;
   box-shadow: 0 0 40px -10px #000;
-  margin: 100px auto;
+  margin: 0px auto;
+  margin-top: 100px;
   padding: 20px 30px;
-  max-width: calc(100vw - 40px);
+  /*   max-width: calc(100vw - 40px); */
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   position: relative;
@@ -1307,4 +1309,35 @@ Form Page
 }
 .form span {
   margin: 0 5px 0 15px;
+}
+.form-blocks {
+  /* display: flex;
+  flex-flow: row;
+  justify-content: space-evenly;
+  align-items: center; */
+  max-width: var(--max-width);
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+}
+.form-display {
+  /*  float: left; */
+  width: 45%;
+  height: 460px;
+  background: #e6e6e6;
+  border-radius: 8px;
+  box-shadow: 0 0 40px -10px #000;
+  margin: 0px auto;
+  margin-top: 100px;
+  padding: 20px 30px;
+  /* max-width: calc(100vw - 40px); */
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+@media screen and (max-width: 800px) {
+  .form-display,
+  .form {
+    width: 45vw;
+  }
 }
